--- a/public-backend/package.json
+++ b/public-backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node ./src/server.js",
-    "run-migrations": "knex migrate:latest",
+    "migrate": "knex migrate:latest",
     "update-schema": "babel-node ./src/scripts/updateSchema.js"
   },
   "author": "Vincent Riemer",
@@ -19,7 +19,7 @@
     "classnames": "^2.1.3",
     "express": "^4.13.3",
     "express-graphql": "^0.3.0",
-    "graphql": "^0.4.4",
+    "graphql": "^0.4.2",
     "graphql-relay": "^0.3.2",
     "knex": "^0.8.6",
     "pg": "^4.4.1",
