--- a/common.yml
+++ b/common.yml
@@ -2,6 +2,11 @@ db:
   image: sameersbn/postgresql
   ports:
     - "5432:5432"
+
 public-backend:
   ports:
     - "3000:3000"
+
+public-frontend:
+  ports:
+    - "3001:3001"
