--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -13,13 +13,17 @@
     "babel-core": "^5.8.24",
     "babel-loader": "^5.3.2",
     "babel-relay-plugin": "^0.2.3",
+    "css-loader": "^0.18.0",
     "express": "^4.13.3",
     "history": "^1.9.1",
+    "moment": "^2.10.6",
     "react": "^0.14.0-rc1",
+    "react-date-picker": "^3.1.3",
     "react-dom": "^0.14.0-rc1",
     "react-relay": "^0.3.2",
     "react-router": "^1.0.0-rc1",
     "react-router-relay": "^0.5.0",
+    "style-loader": "^0.12.4",
     "webpack": "^1.12.1",
     "webpack-dev-server": "^1.11.0"
   }
