--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -12,11 +12,13 @@
     "babel": "^5.8.23",
     "babel-core": "^5.8.24",
     "babel-loader": "^5.3.2",
+    "babel-plugin-flow-comments": "^1.0.9",
     "babel-relay-plugin": "^0.2.3",
     "css-loader": "^0.18.0",
     "express": "^4.13.3",
     "history": "^1.9.1",
     "moment": "^2.10.6",
+    "radium": "^0.14.1",
     "react": "^0.14.0-rc1",
     "react-date-picker": "^3.1.3",
     "react-dom": "^0.14.0-rc1",
