--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -17,14 +17,17 @@
     "css-loader": "^0.18.0",
     "express": "^4.13.3",
     "history": "^1.9.1",
+    "json-loader": "^0.5.3",
+    "markdown-to-react-components": "vincentriemer/markdown-to-react-components",
     "moment": "^2.10.6",
     "radium": "^0.14.1",
-    "react": "^0.14.0-rc1",
+    "react": "^0.14.0",
     "react-date-picker": "^3.1.3",
-    "react-dom": "^0.14.0-rc1",
+    "react-dom": "^0.14.0",
     "react-relay": "^0.3.2",
     "react-router": "^1.0.0-rc1",
     "react-router-relay": "^0.5.0",
+    "sass-loader": "^3.0.0",
     "style-loader": "^0.12.4",
     "webpack": "^1.12.1",
     "webpack-dev-server": "^1.11.0"
