--- a/public-frontend/package.json
+++ b/public-frontend/package.json
@@ -15,8 +15,8 @@
     "babel-relay-plugin": "^0.2.3",
     "express": "^4.13.3",
     "history": "^1.9.1",
-    "react": "^0.14.0-rc1",
-    "react-dom": "^0.14.0-rc1",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
     "react-relay": "^0.3.2",
     "react-router": "^1.0.0-rc1",
     "react-router-relay": "^0.5.0",
