--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.10.6",
     "radium": "^0.14.1",
     "react": "^0.14.0",
+    "react-contenteditable": "lovasoa/react-contenteditable",
     "react-date-picker": "^3.1.3",
     "react-dom": "^0.14.0",
     "react-relay": "^0.3.2",
